@@ -478,7 +478,6 @@ token_id id = T_UNKNOWN;
     }
     
 // cleanup of certain tokens required
-    seen_newline = skipped_newline;
     switch (static_cast<unsigned int>(id)) {
     case T_NONREPLACABLE_IDENTIFIER:
         act_token.set_token_id(T_IDENTIFIER);
@@ -488,6 +487,7 @@ token_id id = T_UNKNOWN;
     case T_GENERATEDNEWLINE:      // was generated by emit_line_directive()
         act_token.set_token_id(T_NEWLINE);
         ++iter_ctx->emitted_lines;
+        seen_newline = true;
         id = T_NEWLINE;
         break;
         
@@ -522,6 +522,9 @@ token_id id = T_UNKNOWN;
         break;
 
     default:
+        // make sure whitespace at line begin keeps seen_newline status
+        if (IS_CATEGORY(id, WhiteSpaceTokenType))
+            seen_newline = skipped_newline;
         break;
     }
 
